codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__multiple_pastes.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"▌[粘贴内容 1003 字符][粘贴内容 1007 字符] another short paste                                       " Hidden by multi-width symbols: [(3, "o"), (5, "t"), (7, " "), (9, " "), (17, " "), (19, " "), (23, " "), (25, " "), (27, " "), (29, " "), (37, " "), (39, " ")]
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
"▌                                                                                                   "
" ⏎ 发送   ⌃J 换行   ⌃T 对话记录   ⌃C 退出                                                           " Hidden by multi-width symbols: [(4, " "), (6, " "), (14, " "), (16, " "), (24, " "), (26, " "), (28, " "), (30, " "), (38, " "), (40, " ")]
